# qa-auto-engineer-python-project-314

./: .env  .gitignore  Makefile  README.md  config.py  pyproject.toml  ruff.toml
.github/workflows/: hexlet-check.yml  my_pipeline.yml
pages/: base_page.py  header_page.py  label_create_page.py  labels_page.py  left_menu_page.py  login_page.py  status_create_page.py  statuses_page.py  task_create_page.py  task_page.py  tasks_page.py  user_create_page.py  users_page.py
pages/actions/: login_actions.py
pages/locators/: entities_locators.py  header_locators.py  label_create_locators.py  labels_locators.py  left_menu_locators.py  login_locators.py  second_header_locators.py  status_create_locators.py  statuses_locators.py  task_create_locators.py  task_locators.py  tasks_locators.py  user_create_locators.py  users_locators.py
steps/: labels_steps.py  login_steps.py  statuses_steps.py  tasks_steps.py  users_steps.py
tests/: conftest.py  test_auth.py  test_labels.py  test_main_page.py  test_open_main_page.py  test_statuses.py  test_tasks.py  test_users.py
utils/: data_generator.py  generate_user.py
