[project]
name = "hexlet-code"
version = "0.1.0"
description = "Test project with for kanban board"
authors = [
	{name = "Коваль Виктор", email = "yan1992@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pyyaml>=6.0.3",
    "selenium>=4.43.0",
    "allure-pytest>=2.16.0",
    "pytest-dotenv>=0.5.2"
]

[dependency-groups]
dev = [
    "ruff>=0.15.8",
]

[tool.pytest.ini_options]
env_files = [
    ".env",
]
markers = [
    "flaky: flaky tests",
]
